--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
+    "express-handlebars": "^6.0.6",
     "express-session": "^1.16.2",
     "form-data": "^4.0.0",
     "jsonwebtoken": "^8.5.1",
@@ -17,6 +18,7 @@
     "mongoose": "^5.6.10",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.7.7",
     "nodemon": "^2.0.16"
   },
   "scripts": {
