--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "This is a user login and registration app using Node.js, Express, Mongoose and express-sessions. ",
   "main": "server.js",
   "dependencies": {
-    "@pusher/push-notifications-server": "^1.2.6",
+    "@pusher/push-notifications-server": "^1.0.1",
+    "axios": "^1.2.5",
     "bcrypt": "^5.0.1",
     "connect-mongo": "^3.0.0",
     "crypto": "^1.0.1",
@@ -13,12 +14,12 @@
     "express": "^4.17.1",
     "express-handlebars": "^6.0.6",
     "express-session": "^1.16.2",
-    "fcm-node": "^1.6.1",
+    "fcm-node": "^1.3.0",
     "fcm-push": "^1.1.3",
     "firebase": "^9.15.0",
     "firebase-admin": "^11.4.1",
     "form-data": "^4.0.0",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^9.0.0",
     "mailgun.js": "^7.0.0",
     "mongoose": "^5.6.10",
     "morgan": "^1.10.0",
