--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,11 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-      - run: npm ci
-      - run: npm run build --if-present
-      - run: npm test
+      - name: npm install, build, and test
+        run: |
+          npm ci
+          npm run build --if-present
+          npm start
+          npx wait-on http://localhost:3000
+        env:
+          CI: true
