--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.7.7",
-    "nodemon": "^2.0.16"
+    "nodemon": "^2.0.16",
+    "salted-md5": "^4.0.5"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
