--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.7.7",
     "nodemon": "^2.0.16",
-    "salted-md5": "^4.0.5"
+    "salted-md5": "^4.0.5",
+    "socket.io": "^4.7.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
