--- a/package.json
+++ b/package.json
@@ -19,15 +19,16 @@
     "firebase": "^9.15.0",
     "firebase-admin": "^11.5.0",
     "form-data": "^4.0.0",
+    "google-auth-library": "^9.14.0",
     "jsonwebtoken": "^9.0.0",
     "mailgun.js": "^7.0.0",
-    "mongoose": "^5.6.10",
+    "mongodb": "^6.8.0",
+    "mongoose": "^8.5.4",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.7.7",
     "nodemon": "^2.0.16",
-    "salted-md5": "^4.0.5",
-    "socket.io": "^4.7.2"
+    "salted-md5": "^4.0.5"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
