--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "creating-registration-and-login-form-in-nodejs-and-mongodb",
   "version": "1.0.0",
+  "engines": {
+    "node": "16.x"
+  },
   "description": "This is a user login and registration app using Node.js, Express, Mongoose and express-sessions. ",
   "main": "server.js",
   "dependencies": {
